# juliaPIV

./: .gitignore  MANIFEST.in  README.md  pypi-upload-steps.txt  pyproject.toml  requirements.txt
src/PIVPipelineUtility/: Manifest.toml  Project.toml  package_compile_notes.txt  precompile.jl
src/PIVPipelineUtility/precompile/: precompile.jl
src/PIVPipelineUtility/precompile/in/batch/: precompile.txt
src/PIVPipelineUtility/src/: PIVPipelineUtility.jl  main.jl
src/juliaPIV/: batcher.py  juliaPIV.py  julia_compiler.py  utils.py
src/juliaPIV/PIVPipelineUtility/: Manifest.toml  Project.toml  package_compile_notes.txt
src/juliaPIV/PIVPipelineUtility/src/: PIVPipelineUtility.jl  main.jl
src/juliaPIV/PIVPipelineUtility/src/precompile/: precompile.jl  precompile.yaml
src/juliaPIV/PIVPipelineUtility/src/precompile/in/batch/: precompile.txt
src/juliaPIV/batcher/: batcher.py
src/juliaPIV/pivpipe/: pivpipe.py
tests/batches/: batch1.txt  batch2.txt  batch3.txt  batch4.txt  batch5.txt  batch6.txt
tests/piv_mat_out/: A044_C001_020824.037037.mat  A044_C001_020824.037039.mat  A044_C001_020824.037041.mat  A044_C001_020824.037043.mat  A044_C001_020824.037045.mat  A044_C001_020824.037047.mat
tests/settings/: test.yaml
